# ABII-c-logging-plugin

./: CMakeLists.txt  INSTALL.md  README.md  custom_enum_printers.h  custom_printers.h  syms
hooks/: aio.cpp  aliases.cpp  aliases.h  alloca.cpp  argp.cpp  argp.h  argz.cpp  assert.cpp  ctype.cpp  ctype.h  dirent.cpp  dlfcn.cpp  dlfcn.h  elf.h  envz.cpp  err.cpp  errno.cpp  error.cpp  execinfo.cpp  fcntl.cpp  fcntl.h  fmtmsg.cpp  fmtmsg.h  fnmatch.cpp  fnmatch.h  fstab.cpp  fstab.h  fts.cpp  fts.h  ftw.cpp  ftw.h  gconv.h  glob.cpp  glob.h  grp.cpp  grp.h  gshadow.cpp  gshadow.h  iconv.cpp  ifaddrs.cpp  (+56 more)
hooks/arpa/: nameser_compat.h
hooks/asm-generic/: errno-base.h
hooks/bits/: cpu-set.h  dirent.h  fcntl-linux.h  fcntl.h  ioctl-types.h  mqueue.h  netdb.h  pthreadtypes.h  sched.h  semaphore.h  sigaction.h  signum-arch.h  socket.h  socket_type.h  ss_flags.h  struct_mutex.h  struct_rwlock.h  struct_stat.h  termios-struct.h
hooks/bits/types/: __fpos64_t.h  __fpos_t.h  __mbstate_t.h  __sigset_t.h  __sigval_t.h  cookie_io_functions_t.h  res_state.h  sigevent_t.h  siginfo_t.h  stack_t.h  struct___jmp_buf_tag.h  struct_sched_param.h  struct_sigstack.h  struct_timespec.h
hooks/netinet/: in.h
include/: aio.cpp  aio.h  aliases.cpp  aliases.h  alloca.cpp  ar.h  argp.cpp  argp.h  assert.cpp  dirent.h  dlfcn.cpp  dlfcn.h  envz.cpp  err.cpp  link.cpp  link.h  obstack.cpp  pthread.cpp  pthread.h  regex.cpp  regex.h  resolv.cpp  stdio.cpp  stdio.h
include/asm-generic/: errno-base.h  errno.h
include/bits/: atomic_wide_counter.h  dirent.h  fcntl-linux.h  fcntl.h  netdb.h  sched.h  sigaction.h  sigcontext.h  siginfo-consts.h  signum-arch.h  signum-generic.h  socket.h  socket_type.h  ss_flags.h  struct_mutex.h  termios-struct.h  thread-shared-types.h  time.h
include/bits/types/: __locale_t.h  res_state.h  sigevent_t.h  siginfo_t.h  stack_t.h
include/linux/: audit.h
include/netinet/: in.h
